--- a/EDIT_LaTeX/Assignments/A-1/Execution/Argomenti/Capitolo1.tex
+++ b/EDIT_LaTeX/Assignments/A-1/Execution/Argomenti/Capitolo1.tex
@@ -1,6 +1,171 @@
 \chapter{Tasks 4 (e-g-h-i)}
 \section{e)}
+
+\begin{center}
+\begin{tikzpicture}[scale=0.2]
+\tikzstyle{every node}+=[inner sep=0pt]
+\draw [black] (20.8,-20.8) circle (3);
+\draw (20.8,-20.8) node {$q_0$};
+\draw [black] (36.8,-20.8) circle (3);
+\draw (36.8,-20.8) node {$q_1$};
+\draw [black] (53,-36) circle (3);
+\draw (53,-36) node {$q_3$};
+\draw [black] (53,-36) circle (2.4);
+\draw [black] (52.3,-20.8) circle (3);
+\draw (52.3,-20.8) node {$q_2$};
+\draw [black] (52.3,-20.8) circle (2.4);
+\draw [black] (12.2,-19.9) -- (17.82,-20.49);
+\fill [black] (17.82,-20.49) -- (17.07,-19.91) -- (16.97,-20.9);
+\draw [black] (23.259,-19.095) arc (117.5594:62.4406:11.976);
+\fill [black] (34.34,-19.1) -- (33.86,-18.28) -- (33.4,-19.17);
+\draw (28.8,-17.24) node [above] {$0$};
+\draw [black] (39.519,-22.066) arc (62.25921:31.38897:31.03);
+\fill [black] (39.52,-22.07) -- (39.99,-22.88) -- (40.46,-22);
+\draw (47.32,-26.42) node [above] {$0$};
+\draw [black] (50.027,-35.63) arc (-102.19192:-164.1599:16.872);
+\fill [black] (50.03,-35.63) -- (49.35,-34.97) -- (49.14,-35.95);
+\draw (41.03,-31.93) node [below] {$1$};
+\draw [black] (19.477,-18.12) arc (234:-54:2.25);
+\draw (20.8,-13.55) node [above] {$1$};
+\fill [black] (22.12,-18.12) -- (23,-17.77) -- (22.19,-17.18);
+\draw [black] (50.421,-37.527) arc (-63.55751:-166.98177:20.541);
+\fill [black] (21.26,-23.76) -- (20.95,-24.65) -- (21.93,-24.43);
+\draw (31.52,-38.22) node [below] {$1$};
+\draw [black] (39.717,-20.107) arc (100.20591:79.79409:27.274);
+\fill [black] (49.38,-20.11) -- (48.68,-19.47) -- (48.51,-20.46);
+\draw (44.55,-19.18) node [above] {$0$};
+\draw [black] (54.579,-18.867) arc (158.03624:-129.96376:2.25);
+\draw (59.61,-18.71) node [right] {$0$};
+\fill [black] (55.22,-21.43) -- (55.78,-22.2) -- (56.15,-21.27);
+\draw [black] (52.44,-23.8) -- (52.86,-33);
+\fill [black] (52.86,-33) -- (53.32,-32.18) -- (52.33,-32.23);
+\draw (52.08,-28.42) node [left] {$1$};
+\end{tikzpicture}
+\end{center}\newpage
 \section{g)}
+\begin{center}
+\begin{tikzpicture}[scale=0.2]
+\tikzstyle{every node}+=[inner sep=0pt]
+\draw [black] (21.2,-7.3) circle (3);
+\draw (21.2,-7.3) node {$q_1$};
+\draw [black] (20.6,-17.1) circle (3);
+\draw (20.6,-17.1) node {$q_2$};
+\draw [black] (8.5,-7) circle (3);
+\draw (8.5,-7) node {$q_0$};
+\draw [black] (32.8,-6.5) circle (3);
+\draw (32.8,-6.5) node {$q_3$};
+\draw [black] (32.8,-17.1) circle (3);
+\draw (32.8,-17.1) node {$q_4$};
+\draw [black] (32.8,-27.3) circle (3);
+\draw (32.8,-27.3) node {$q_5$};
+\draw [black] (44.7,-6.5) circle (3);
+\draw (44.7,-6.5) node {$q_6$};
+\draw [black] (43.9,-17.1) circle (3);
+\draw (43.9,-17.1) node {$q_7$};
+\draw [black] (43.2,-27.7) circle (3);
+\draw (43.2,-27.7) node {$q_8$};
+\draw [black] (42.7,-36.6) circle (3);
+\draw (42.7,-36.6) node {$q_9$};
+\draw [black] (53.5,-36.7) circle (3);
+\draw (53.5,-36.7) node {$q10$};
+\draw [black] (69.8,-21.6) circle (3);
+\draw (69.8,-21.6) node {$q11$};
+\draw [black] (69.8,-21.6) circle (2.4);
+\draw [black] (55,-13.8) circle (3);
+\draw (55,-13.8) node {$q13$};
+\draw [black] (56.3,-6.5) circle (3);
+\draw (56.3,-6.5) node {$q14$};
+\draw [black] (66.8,-36.7) circle (3);
+\draw (66.8,-36.7) node {$q12$};
+\draw [black] (0.7,-7) -- (5.5,-7);
+\fill [black] (5.5,-7) -- (4.7,-6.5) -- (4.7,-7.5);
+\draw [black] (11.207,-5.727) arc (107.60172:69.6919:11.317);
+\fill [black] (18.56,-5.9) -- (17.98,-5.15) -- (17.63,-6.09);
+\draw (14.91,-4.68) node [above] {$0$};
+\draw [black] (23.626,-5.56) arc (115.84576:72.04461:8.776);
+\fill [black] (30.16,-5.11) -- (29.55,-4.39) -- (29.24,-5.34);
+\draw (26.75,-4.14) node [above] {$0$};
+\draw [black] (35.8,-6.5) -- (41.7,-6.5);
+\fill [black] (41.7,-6.5) -- (40.9,-6) -- (40.9,-7);
+\draw (38.75,-6) node [above] {$0$};
+\draw [black] (23.6,-17.1) -- (29.8,-17.1);
+\fill [black] (29.8,-17.1) -- (29,-16.6) -- (29,-17.6);
+\draw (26.7,-17.6) node [below] {$0$};
+\draw [black] (33.84,-14.325) arc (144.02753:35.97247:5.572);
+\fill [black] (42.86,-14.32) -- (42.79,-13.38) -- (41.99,-13.97);
+\draw (38.35,-11.53) node [above] {$1$};
+\draw [black] (46.78,-16.25) -- (52.12,-14.65);
+\fill [black] (52.12,-14.65) -- (51.22,-14.4) -- (51.5,-15.36);
+\draw (48.62,-14.9) node [above] {$0$};
+\draw [black] (57.958,-14.287) arc (76.73877:47.68034:22.007);
+\fill [black] (67.73,-19.44) -- (67.47,-18.53) -- (66.8,-19.27);
+\draw (64.16,-15.74) node [above] {$0$};
+\draw [black] (59.277,-6.822) arc (77.48156:6.1144:13.549);
+\fill [black] (69.81,-18.61) -- (70.22,-17.76) -- (69.23,-17.86);
+\draw (66.98,-9.56) node [right] {$1$};
+\draw [black] (67.683,-39.555) arc (44.90972:-243.09028:2.25);
+\draw (65.01,-44.03) node [below] {$0,1$};
+\fill [black] (65.07,-39.14) -- (64.15,-39.35) -- (64.86,-40.06);
+\draw [black] (69.22,-24.54) -- (67.38,-33.76);
+\fill [black] (67.38,-33.76) -- (68.03,-33.07) -- (67.05,-32.88);
+\draw (67.56,-28.84) node [left] {$0$};
+\draw [black] (53.355,-39.685) arc (24.9454:-263.0546:2.25);
+\draw (49.22,-43.1) node [below] {$1$};
+\fill [black] (51.04,-38.4) -- (50.11,-38.28) -- (50.53,-39.19);
+\draw [black] (55.256,-34.268) arc (142.40599:123.21685:49.01);
+\fill [black] (67.24,-23.17) -- (66.3,-23.19) -- (66.85,-24.02);
+\draw (59.77,-27.73) node [above] {$0$};
+\draw [black] (64.856,-34.415) arc (-139.97918:-147.62838:235.664);
+\fill [black] (64.86,-34.41) -- (64.72,-33.48) -- (63.96,-34.12);
+\draw (54.57,-23.42) node [left] {$0_6$};
+\draw [black] (57.712,-9.147) arc (27.16039:11.18291:93.705);
+\fill [black] (66.27,-33.75) -- (66.6,-32.87) -- (65.62,-33.06);
+\draw (63.61,-20.41) node [right] {$0$};
+\draw [black] (46.837,-17.65) arc (107.1301:-180.8699:2.25);
+\draw (49.88,-22.55) node [right] {$1$};
+\fill [black] (45.25,-19.77) -- (45.01,-20.68) -- (45.96,-20.38);
+\draw [black] (34.12,-9.19) -- (41.88,-25.01);
+\fill [black] (41.88,-25.01) -- (41.98,-24.07) -- (41.08,-24.51);
+\draw (38.7,-16.01) node [right] {$1_3$};
+\draw [black] (34.9,-19.24) -- (41.1,-25.56);
+\fill [black] (41.1,-25.56) -- (40.9,-24.64) -- (40.18,-25.34);
+\draw (37.47,-23.87) node [left] {$0_4$};
+\draw [black] (34.99,-29.35) -- (40.51,-34.55);
+\fill [black] (40.51,-34.55) -- (40.27,-33.63) -- (39.59,-34.36);
+\draw (36.73,-32.43) node [below] {$0$};
+\draw [black] (22.9,-19.02) -- (30.5,-25.38);
+\fill [black] (30.5,-25.38) -- (30.21,-24.48) -- (29.56,-25.25);
+\draw (25.69,-22.69) node [below] {$1$};
+\draw [black] (10.8,-8.92) -- (18.3,-15.18);
+\fill [black] (18.3,-15.18) -- (18,-14.28) -- (17.36,-15.05);
+\draw (13.54,-12.54) node [below] {$1$};
+\draw [black] (23.96,-8.468) arc (62.93779:36.67812:20.824);
+\fill [black] (31.19,-14.57) -- (31.11,-13.63) -- (30.31,-14.23);
+\draw (28.93,-10.61) node [above] {$1$};
+\draw [black] (71.564,-19.188) arc (171.55281:-116.44719:2.25);
+\draw (76.47,-17.33) node [right] {$1$};
+\fill [black] (72.79,-21.53) -- (73.51,-22.15) -- (73.65,-21.16);
+\draw [black] (45.7,-36.63) -- (50.5,-36.67);
+\fill [black] (50.5,-36.67) -- (49.7,-36.16) -- (49.7,-37.16);
+\draw (48.1,-36.14) node [above] {$0$};
+\draw [black] (44.488,-38.994) arc (64.49148:-223.50852:2.25);
+\draw (44.44,-43.83) node [below] {$1$};
+\fill [black] (41.89,-39.48) -- (41.09,-39.98) -- (41.99,-40.41);
+\draw [black] (34.123,-29.98) arc (54:-234:2.25);
+\draw (32.8,-34.55) node [below] {$1$};
+\fill [black] (31.48,-29.98) -- (30.6,-30.33) -- (31.41,-30.92);
+\draw [black] (57.129,-15.897) arc (73.17901:-214.82099:2.25);
+\draw (58.13,-20.71) node [below] {$1$};
+\fill [black] (54.63,-16.77) -- (53.92,-17.39) -- (54.88,-17.68);
+\draw [black] (47.7,-6.5) -- (53.3,-6.5);
+\fill [black] (53.3,-6.5) -- (52.5,-6) -- (52.5,-7);
+\draw (50.5,-7) node [below] {$0$};
+\draw [black] (46.175,-27.985) arc (75.71543:21.99153:9.763);
+\fill [black] (52.82,-33.79) -- (52.98,-32.86) -- (52.06,-33.24);
+\draw (51.2,-29.6) node [above] {$1$};
+\end{tikzpicture}
+\end{center}
+
 \section{h)}
 \begin{center}
 \begin{tikzpicture}[scale=0.2]
@@ -42,3 +207,82 @@
 \end{tikzpicture}
 \end{center}
 \section{i)}
+\begin{center}
+\begin{tikzpicture}[scale=0.2]
+\tikzstyle{every node}+=[inner sep=0pt]
+\draw [black] (10,-11.7) circle (3);
+\draw (10,-11.7) node {$q_0$};
+\draw [black] (21.8,-11.7) circle (3);
+\draw (21.8,-11.7) node {$q_1$};
+\draw [black] (21.8,-11.7) circle (2.4);
+\draw [black] (44.7,-11.7) circle (3);
+\draw (44.7,-11.7) node {$q_3$};
+\draw [black] (44.7,-11.7) circle (2.4);
+\draw [black] (33,-11.7) circle (3);
+\draw (33,-11.7) node {$q_2$};
+\draw [black] (33,-11.7) circle (2.4);
+\draw [black] (56.5,-11.7) circle (3);
+\draw (56.5,-11.7) node {$q_4$};
+\draw [black] (21.8,-24.3) circle (3);
+\draw (21.8,-24.3) node {$q_5$};
+\draw [black] (21.8,-24.3) circle (2.4);
+\draw [black] (34.5,-24.3) circle (3);
+\draw (34.5,-24.3) node {$q_6$};
+\draw [black] (34.5,-24.3) circle (2.4);
+\draw [black] (44.7,-23.6) circle (3);
+\draw (44.7,-23.6) node {$q_7$};
+\draw [black] (44.7,-23.6) circle (2.4);
+\draw [black] (56.7,-23.7) circle (3);
+\draw (56.7,-23.7) node {$q_8$};
+\draw [black] (2.6,-11.7) -- (7,-11.7);
+\fill [black] (7,-11.7) -- (6.2,-11.2) -- (6.2,-12.2);
+\draw [black] (13,-11.7) -- (18.8,-11.7);
+\fill [black] (18.8,-11.7) -- (18,-11.2) -- (18,-12.2);
+\draw (15.9,-11.2) node [above] {$1$};
+\draw [black] (24.8,-11.7) -- (30,-11.7);
+\fill [black] (30,-11.7) -- (29.2,-11.2) -- (29.2,-12.2);
+\draw (27.4,-11.2) node [above] {$1$};
+\draw [black] (36,-11.7) -- (41.7,-11.7);
+\fill [black] (41.7,-11.7) -- (40.9,-11.2) -- (40.9,-12.2);
+\draw (38.85,-11.2) node [above] {$1$};
+\draw [black] (47.7,-11.7) -- (53.5,-11.7);
+\fill [black] (53.5,-11.7) -- (52.7,-11.2) -- (52.7,-12.2);
+\draw (50.6,-12.2) node [below] {$0$};
+\draw [black] (58.759,-9.744) arc (158.62087:-129.37913:2.25);
+\draw (63.8,-9.51) node [right] {$1,0$};
+\fill [black] (59.43,-12.3) -- (59.99,-13.06) -- (60.35,-12.13);
+\draw [black] (12.05,-13.89) -- (19.75,-22.11);
+\fill [black] (19.75,-22.11) -- (19.57,-21.18) -- (18.84,-21.87);
+\draw (16.43,-16.53) node [right] {$0$};
+\draw [black] (23.126,-14.381) arc (18.69908:-18.69908:11.288);
+\fill [black] (23.13,-14.38) -- (22.91,-15.3) -- (23.86,-14.98);
+\draw (24.22,-18) node [right] {$1$};
+\draw [black] (20.236,-21.754) arc (-157.27708:-202.72292:9.719);
+\fill [black] (20.24,-21.75) -- (20.39,-20.82) -- (19.47,-21.21);
+\draw (18.98,-18) node [left] {$0$};
+\draw [black] (24.339,-13.297) arc (55.32997:35.12296:34.306);
+\fill [black] (24.34,-13.3) -- (24.71,-14.16) -- (25.28,-13.34);
+\draw (30.43,-16.68) node [above] {$1_6$};
+\draw [black] (31.49,-14.291) arc (-32.67051:-50.59656:35.233);
+\fill [black] (24.2,-22.5) -- (25.13,-22.38) -- (24.5,-21.6);
+\draw (28.71,-20.13) node [right] {$0_2$};
+\draw [black] (24.8,-24.3) -- (31.5,-24.3);
+\fill [black] (31.5,-24.3) -- (30.7,-23.8) -- (30.7,-24.8);
+\draw (28.15,-24.8) node [below] {$0$};
+\draw [black] (37.49,-24.09) -- (41.71,-23.81);
+\fill [black] (41.71,-23.81) -- (40.87,-23.36) -- (40.94,-24.36);
+\draw (39.69,-24.51) node [below] {$0$};
+\draw [black] (46.971,-25.542) arc (77.19859:-210.80141:2.25);
+\draw (48.33,-30.32) node [below] {$0$};
+\fill [black] (44.54,-26.58) -- (43.88,-27.25) -- (44.85,-27.47);
+\draw [black] (47.7,-23.62) -- (53.7,-23.68);
+\fill [black] (53.7,-23.68) -- (52.9,-23.17) -- (52.9,-24.17);
+\draw (50.7,-24.16) node [below] {$1$};
+\draw [black] (58.697,-21.477) arc (165.80141:-122.19859:2.25);
+\draw (63.71,-20.31) node [right] {$1,0$};
+\fill [black] (59.68,-23.93) -- (60.33,-24.61) -- (60.58,-23.64);
+\draw [black] (42.237,-10.008) arc (263.24883:-24.75117:2.25);
+\draw (40.4,-5.31) node [above] {$1$};
+\fill [black] (44.54,-8.72) -- (45.14,-7.98) -- (44.14,-7.86);
+\end{tikzpicture}
+\end{center}
