--- a/EDIT_LaTeX/Assignments/A-1/Execution/main.tex
+++ b/EDIT_LaTeX/Assignments/A-1/Execution/main.tex
@@ -38,7 +38,7 @@ numberstyle = \tiny,
 
     \begin{center}
         {\scshape\huge\bfseries Assignment 3}\\
-        \LARGE Tim Neutze \\ \# number\_here \\
+        \LARGE Tim Neutze \\  5578777 \\
         \LARGE Lorenzo Tecchia \\ 5581906 \\ \today
     \end{center}
 
