starting the second assingment

--- a/EDIT_LaTeX/Assignments/A-2/Execution/main.tex
+++ b/EDIT_LaTeX/Assignments/A-2/Execution/main.tex
@@ -7,7 +7,9 @@
 \usepackage{enumitem}
 \usepackage[backend=biber,style=verbose-trad2, citestyle=numeric]{biblatex}
 \usepackage{listings, xcolor}
-\addbibresource{citations/assignement1.bib}
+\usepackage[yyyymmdd]{datetime}
+\renewcommand{\dateseparator}{.}
+\addbibresource{citations/assignement2.bib}
 \lstset{
 tabsize = 4, %% set tab space width
 showstringspaces = false, %% prevent space marking in strings, string is defined as the text that is generally printed directly to the console
@@ -26,26 +28,29 @@ numberstyle = \tiny,
 
 \begin{document}
 \begin{center}
-	
+    
 \end{center}
     \begin{figure}[htb]
             \centering\includegraphics[width=.5\textwidth]{Immagini/FUlogo.png}
     \end{figure}
     
 
+ {\centering\scshape\LARGE\bfseries Aufgabe 2
     \begin{center}
-        {\scshape\huge\bfseries Assignment 1}\\
-        \LARGE Lorenzo Tecchia \\ 5581906 \\ 2023.04.24
-    \end{center}
+	   Tim Neutze \\  5578777 \\
+       Lorenzo Tecchia \\ 5581906  \\ \today
+    \end{center}}
 
 
     \newpage
     
     \tableofcontents
+    \listoffigures
     
-	\include{Argomenti/Capitolo1}
+    \include{Argomenti/Capitolo1}
     \include{Argomenti/Capitolo2}
     \include{Argomenti/Capitolo3}
+	\include{Argomenti/Capitolo4}
     
     \printbibliography
     
