--- a/EDIT_LaTeX/Assignments/A-2/Execution/main.tex
+++ b/EDIT_LaTeX/Assignments/A-2/Execution/main.tex
@@ -8,6 +8,7 @@
 \usepackage[backend=biber,style=verbose-trad2, citestyle=numeric]{biblatex}
 \usepackage{listings, xcolor}
 \usepackage[yyyymmdd]{datetime}
+\usepackage{tikz}
 \renewcommand{\dateseparator}{.}
 \addbibresource{citations/assignement2.bib}
 \lstset{
