--- a/EDIT_LaTeX/Assignments/A-2/Execution/Argomenti/Capitolo3.tex
+++ b/EDIT_LaTeX/Assignments/A-2/Execution/Argomenti/Capitolo3.tex
@@ -1,6 +1,6 @@
 \chapter{Task 3}
-\begin{parlist}
-\item
+
+\section{a)}
 \begin{center}
 \begin{tikzpicture}[scale=0.2]
 \tikzstyle{every node}+=[inner sep=0pt]
@@ -27,7 +27,7 @@
 \fill [black] (32.29,-16.08) -- (33,-16.71) -- (33.16,-15.72);
 \end{tikzpicture}
 \end{center}
-\item 
+\section{b)}
 \begin{center}
 \begin{tikzpicture}[scale=0.2]
 \tikzstyle{every node}+=[inner sep=0pt]
@@ -48,5 +48,3 @@
 \draw (28.8,-22.25) node [left] {$1$};
 \end{tikzpicture}
 \end{center}
-	
-\end{parlist}
