--- a/EDIT_LaTeX/Assignments/A-2/Execution/Argomenti/Capitolo4.tex
+++ b/EDIT_LaTeX/Assignments/A-2/Execution/Argomenti/Capitolo4.tex
@@ -1,1 +1,6 @@
 \chapter{Task 5}
+\section{b)}
+Given the language $L = \{1^{2^n} | n \geq 0\}$ via $\Sigma = \{0,1\}$ we use the pumping lemma. If we took the pumping length of 1, the string of the language $L$ would be containing  11(also the string having a length more than p). In this case though choosing the substrings $xy^{i}z$ would mean we choosing the substrings $x= \epsilon$ or $z = \epsilon$. So then taking the substring y and repeating it an arbitrary amount of times, say 2 would mean that the substring containing $xyyz$ would still be accepted by the language, but it's clear that a string containing 111 wouldn't be accepted by the language since the only string of length odd that the language accepts is the string containing just 1. And that is not the case.\\
+	Also the language is basically $11^p \rightarrow p>0$ which means that the length will aways be bigger than the pumping length which means that the pumping Lemma doesn't apply so the  language is not regular. 
+\section{f)}
+Given the language $L = \{0^{n}1^{m}0^{n+m} | n, m \in \mathbb{N} \}$ using the same principles stated above we can choose arbitrarily the substring $y$. If we chose any number of 1 followed by the last element of the string being a 0 and repeating this string any amount of time, we would then see an alternating amount of substrings of 01 that would ultimately not be accepted by the language since, it's defined in a way that are chunks of 0 followed by chunks of 1 and again chunks of 0 but not the numbers mixed in between. So the language is not regular.
