--- a/EDIT_LaTeX/Assignments/A-2/Execution/main.tex
+++ b/EDIT_LaTeX/Assignments/A-2/Execution/main.tex
@@ -4,10 +4,12 @@
 \usepackage{graphicx}
 \usepackage[english]{babel}
 \usepackage{hyperref}
+\usepackage{amsfonts} 
 \usepackage{enumitem}
 \usepackage[backend=biber,style=verbose-trad2, citestyle=numeric]{biblatex}
 \usepackage{listings, xcolor}
 \usepackage[yyyymmdd]{datetime}
+\usepackage{subcaption}
 \usepackage{tikz}
 \renewcommand{\dateseparator}{.}
 \addbibresource{citations/assignement2.bib}
@@ -46,7 +48,6 @@ numberstyle = \tiny,
     \newpage
     
     \tableofcontents
-    \listoffigures
     
     \include{Argomenti/Capitolo1}
     \include{Argomenti/Capitolo2}
