--- a/EDIT_LaTeX/Assignments/A-4/Execution/Argomenti/Capitolo2.tex
+++ b/EDIT_LaTeX/Assignments/A-4/Execution/Argomenti/Capitolo2.tex
@@ -1,2 +1,9 @@
 \chapter{Task 4}
-    
+\section{4.a}
+This grammar has the type 0.
+
+\section{4.b}
+This grammar has type 3.
+
+\section{4.c}
+This grammar has type 2.
